
2018-03-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am (clean): remove output files generated by bison
	* Makefile.am (maintainer-clean): remove generated manpage and all
	  files created by bison/flex

2018-02-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (string_statement): fixed bug #497 STRING within
	  STRING did override the target list
	* parser.y, reserved.c: work on FR #183 added VALIDATE statement
	  as PENDING

2018-02-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_display_fields): activated dump code for
	  BASED items

2018-02-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_module_init): cater for empty source_cache;
	  disabled generation of flag_debug_trace=COB_MODULE_DEBUG as
	  this is currently not checked anywhere
	* warning.def: change cb_warn_filler to be always active
	* error.c, field.c, tree.c, typeck.c: only raise some cb_warn_filler
	  warnings if -W/-Wall was used

2018-02-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.y (validate_move): check for ADDRESS OF var as invalid
	  (bug #495), fixed check for SET statement

2018-02-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (select_clause): minimized context-sensitive settings
	* reserved.c, cobc.h, parser.y: added CB_CS_SELECT
	* tree.h: added password (reference) to struct cb_file / cb_alternate_key
	* parser.y, reserved.c: added PASSWORD as PENDING (currently only for
	  indexed files)

2018-02-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y (report_description_option): fixed reference for CODE IS
	* parser.y (page_line_column): adjusted check for duplicate LINE LIMIT
	* codegen.c (output_internal_function): fixed position of
	  initialization for report files in INITIAL programs
	* pplex.l, scanner.l: don't consume trailing whitespace/newline