@@ -4,6 +4,10 @@
 	* Makefile.am (clean): remove output files generated by bison
 	* Makefile.am (maintainer-clean): remove generated manpage and all
 	  files created by bison/flex
+	* pplex.l, scanner.l: fixed quoting of ' and " in regexes to
+	  let xgettext process these files without error (also fixes
+	  rendering in editors/ide's), note: generated C files are binary
+	  identical
 
 2018-02-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
